tests/syntax-error/user-main.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g user-main.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: user-main.silly:10:1: error: Attempt to define function main more than once
// CHECK:    10 | FUNCTION main ( INT16 w ) : INT16
// CHECK:       | ^
// CHECK: user-main.silly:12:12: error: Undeclared variable w
// CHECK:    12 |     RETURN w;
// CHECK:       |            ^

FUNCTION main ( INT16 w ) : INT16
{
    RETURN w;
};
